Added Soul Files

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <span class="project_title">Game</span>
             <span class="date">On Going</span>
             <img class="carousel_img" src="/SourcesWeb/ScuffedDodgeBall.JPG">
-            <p class="carousel_desc">My first dive into Multliplayer Networking Behaviour.</p>
+            <p class="carousel_desc">Multiplayer Dodgeball Game</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/unitylogo.png">
                 <img class="carousel_icons" src="/Sources/C.png">
@@ -74,7 +74,7 @@
         <div class="carousel_box" onclick="location.href = '/Pages/Discord.html'">
             <span class="project_title">Internship</span>
             <span class="date">2023</span>
-            <img class="carousel_img" src="/SourcesWeb/zombiecraft/botchat.PNG">
+            <img class="carousel_img" src="/SourcesWeb/zombiecraft/linkdiscord.PNG">
             <p class="carousel_desc">Developed a Database system and Discord Bot to link with Minecraft</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/kotlin.png">
@@ -98,7 +98,7 @@
             <span class="project_title">School Project</span>
             <span class="date">2022</span> 
             <img class="carousel_img" src="/SourcesWeb/Slot/slotmachine.PNG">
-            <p class="carousel_desc">With Android Studio. A functional and adicting gambling Slot Machine!</p>
+            <p class="carousel_desc">A slot machine simulated for mobile.</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/kotlin.png">
                 <img class="carousel_icons" src="/Sources/android studio.png">
@@ -109,7 +109,7 @@
             <span class="project_title">Level Design</span>
             <span class="date">2018</span>
             <img class="carousel_img" src="/SourcesWeb/CSGO/SSOB.PNG">
-            <p class="carousel_desc">Used Source's Hammer SDK tool to create some custom maps.</p>
+            <p class="carousel_desc">Using Source's Hammer SDK tool to create some custom maps.</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/csgo.png">
                 <img class="carousel_icons" src="/Sources/Hammer_splash.png">
@@ -119,7 +119,7 @@
             <span class="project_title">Level Design</span>
             <span class="date">2018</span>
             <img class="carousel_img" src="/SourcesWeb/WaW/Zombies.jpg">
-            <p class="carousel_desc">Used WaW's Radiant mod tool to create my first Zombie map.</p>
+            <p class="carousel_desc">Uaing WaW's Radiant mod tool to create my first Zombie map.</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/waw.png">
             </div>
