Font Rescale with DVW

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <span style="color: #dda0dd;">lines</span> of 
             <span style="color: plum;">logic</span> and 
             <span style="color:var(--Mint)">pixels</span> of 
-            <span style="color: var(--Mint)">passion</span>."<br><i class="note">-chatgpt</i>
+            <span style="color: var(--Mint)">passion</span>."<br><i class="note">-ChatGPT</i>
         </p>
         <p style="display: flex;">
             <a class="link_pill" href="/Pages/About.html">About Me!</a> 
