More updates on styles

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </p>
         <p style="display: flex;">
             <a class="link_pill" href="/Pages/About.html">About Me!</a> 
-            <a class="link_pill" href="/Pages/Contact.html">Contact Me!</a>
+            <a class="link_pill" href="/Pages/Contact.html"onclick="alert('This Page is not yet completed')">Contact Me!</a>
         </p>
     </div>
     <div style="display:flex; justify-content: center;">
