--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <span class="project_title">Game</span>    
             <span class="date">On Going</span>                    
             <img class="carousel_img" src="/SourcesWeb/Soul/Graveyard.PNG">
-            <p class="carousel_desc">An adventure RPG following a necromancer cursed by his own creation.</p>
+            <p class="carousel_desc">Adventure RPG following a Necromancer cursed by his own creation.</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/unitylogo.png">
                 <img class="carousel_icons" src="/Sources/C.png">
@@ -75,7 +75,7 @@
             <span class="project_title">Internship</span>
             <span class="date">2023</span>
             <img class="carousel_img" src="/SourcesWeb/zombiecraft/linkdiscord.PNG">
-            <p class="carousel_desc">Developed a Database system and Discord Bot to link with Minecraft</p>
+            <p class="carousel_desc">Minecraft to Discord Link and Database</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/kotlin.png">
                 <img class="carousel_icons" src="/Sources/discord.png">
@@ -87,7 +87,7 @@
             <span class="project_title">School Project</span>
             <span class="date">2023</span>
             <img class="carousel_img" src="/SourcesWeb/BrookeCo/BrookeCo.PNG">
-            <p class="carousel_desc">E-Commerce for films, games and books.</p>
+            <p class="carousel_desc">E-Commerce for Films, Games and Books.</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/hcj.png">
                 <img class="carousel_icons" src="/Sources/sql.png">
@@ -98,7 +98,7 @@
             <span class="project_title">School Project</span>
             <span class="date">2022</span> 
             <img class="carousel_img" src="/SourcesWeb/Slot/slotmachine.PNG">
-            <p class="carousel_desc">A slot machine simulated for mobile.</p>
+            <p class="carousel_desc">Mobile Slot Machine</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/kotlin.png">
                 <img class="carousel_icons" src="/Sources/android studio.png">
@@ -109,7 +109,7 @@
             <span class="project_title">Level Design</span>
             <span class="date">2018</span>
             <img class="carousel_img" src="/SourcesWeb/CSGO/SSOB.PNG">
-            <p class="carousel_desc">Using Source's Hammer SDK tool to create some custom maps.</p>
+            <p class="carousel_desc">Custom Maps for CSGO</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/csgo.png">
                 <img class="carousel_icons" src="/Sources/Hammer_splash.png">
@@ -119,7 +119,7 @@
             <span class="project_title">Level Design</span>
             <span class="date">2018</span>
             <img class="carousel_img" src="/SourcesWeb/WaW/Zombies.jpg">
-            <p class="carousel_desc">Uaing WaW's Radiant mod tool to create my first Zombie map.</p>
+            <p class="carousel_desc">Custom Zombies Map for World at World</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/waw.png">
             </div>
