--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img class="carousel_icons" src="/Sources/gimp.png">
             </div>  
         </div>
-        <div class="carousel_box" onclick="alert('This Page is not yet completed')">
+        <div class="carousel_box" onclick="location.href = '/Pages/Dodgeball.html'">
             <span class="project_title">Game</span>
             <span class="date">On Going</span>
             <img class="carousel_img" src="/SourcesWeb/ScuffedDodgeBall.JPG">
