--- a/Pages/Dodgeball.html
+++ b/Pages/Dodgeball.html
@@ -60,7 +60,7 @@
         <div>
               <p class="text">
                 In this project, all models and textures were generously provided by a friend, so I take no credit for the visuals.
-                Aside from those, all backend and frontend development has been handled by me.
+                Aside from those, all backend and frontend development has been handled by myself.
             </p>
 
         </div>
