--- a/Pages/SoulHarbinger.html
+++ b/Pages/SoulHarbinger.html
@@ -46,7 +46,7 @@
 
         <div>
             <p class="text">The main mechanic for this game is the ability to shift between a "Wraith" form and "Human" form. 
-                Inspired from Shadow of War's "Celebrimbor form" and "Eagles Vision" from Assassin's Creed.
+                Inspired by Shadow of War's "Celebrimbor form" and "Eagles Vision" from Assassin's Creed.
             </p>
             <p class="text">Revealing hidden objects and unlocking abilities.
             </p>
@@ -65,7 +65,7 @@
             </p>
             <p class="text">Despite being a programmer I want to learn other skills in the gaming industry.             
             </p>
-            <p class="text">Here are some basic models I did using Blender for the first time.
+            <p class="text">Here are some basic models I created using Blender for the first time.
 
             </p>
         </div>
@@ -92,6 +92,7 @@
             <p class="text">
                 Whether it's Textures, Sounds or GUI, I do my best to learn the basics and implement them.
             </p>
+            <div class="thumbnail_Title">Music</div>
             <p class="text">
                 Here are some early sample audios I made for the game using stock sounds from Ableton 11.
             </p>
