--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <span class="project_title">Internship</span>
             <span class="date">2023</span>
             <img class="carousel_img" src="/SourcesWeb/zombiecraft/linkdiscord.PNG">
-            <p class="carousel_desc">Minecraft to Discord Link and Database</p>
+            <p class="carousel_desc">Discord Bot + Minecraft Linking</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/kotlin.png">
                 <img class="carousel_icons" src="/Sources/discord.png">
