ScuffedPage and links updated

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
     </div>
     <div class="carousel_container" >    
         
+        
+        <div class="carousel_box" onclick="location.href = '/Pages/Dodgeball.html'">
+            <span class="project_title">Game</span>
+            <span class="date">On Going</span>
+            <img class="carousel_img" src="/SourcesWeb/MainCapsule.png">
+            <p class="carousel_desc">Multiplayer Dodgeball Game</p>
+            <div class="carousel_icon_container">
+                <img class="carousel_icons" src="/Sources/unitylogo.png">
+                <img class="carousel_icons" src="/Sources/C.png">
+                <img class="carousel_icons" src="/Sources/Steam.png">
+            </div>
+        </div>
         <div class="carousel_box" onclick="location.href = '/Pages/SoulHarbinger.html'">
             <span class="project_title">Game</span>    
             <span class="date">On Going</span>                    
@@ -60,17 +72,6 @@
                 <img class="carousel_icons" src="/Sources/gimp.png">
             </div>  
         </div>
-        <div class="carousel_box" onclick="location.href = '/Pages/Dodgeball.html'">
-            <span class="project_title">Game</span>
-            <span class="date">On Going</span>
-            <img class="carousel_img" src="/SourcesWeb/ScuffedDodgeBall.JPG">
-            <p class="carousel_desc">Multiplayer Dodgeball Game</p>
-            <div class="carousel_icon_container">
-                <img class="carousel_icons" src="/Sources/unitylogo.png">
-                <img class="carousel_icons" src="/Sources/C.png">
-            </div>
-        </div>
-
         <div class="carousel_box" onclick="location.href = '/Pages/Discord.html'">
             <span class="project_title">Internship</span>
             <span class="date">2023</span>
