--- a/Pages/SoulHarbinger.html
+++ b/Pages/SoulHarbinger.html
@@ -65,7 +65,9 @@
             </p>
             <p class="text">Despite being a programmer I want to learn other skills in the gaming industry.             
             </p>
-            <p class="text">Here are some basic models I created using Blender for the first time.
+            <p class="text">Here are some basic models I created using 
+                <a href="https://www.blender.org/" target="_blank" style="color: rgb(255, 132, 0);"><u>Blender</u></a> 
+                for the first time.
 
             </p>
         </div>
@@ -94,7 +96,8 @@
             </p>
             <div class="thumbnail_Title">Music</div>
             <p class="text">
-                Here are some early sample audios I made for the game using stock sounds from Ableton 11.
+                Here are some early sample audios I made for the game using stock sounds from 
+                <a href="https://www.ableton.com/" target="_blank" style="color: yellow"><u>Ableton 11</u></a>.
             </p>
             <p class="text">
                 Convering a genre more gloomy and mystical
